* removed unneded import in factory.py that triggered undesired dependency to htcondor
* format of the messages returned by the Sched plugins fixed

2.4.9

* fixed bug in sched plugin StatusOffline not checking if siteinfo is None 

2.4.8

* only reading configuration files that ends with string ".conf"
* simplified the name of plugins modules and classes, and pluginsmanagement code accordingly
* added a new layer to the plugins directory structure
* distinguish between self.keep_running is None than when is 0
* MaxToRun returns 0 when there is no BatchInfo
* added function debugrestart to init script
* added TRACE level to logging systems
* manually merged various changes to loglevels and sched plugins from ec2fixed adhoc branch.
* fixed minor bug with debugrestart when log file doesn't exist
* cleaned up sched plugin messages to be more consistent 
* introduced email notification throttling at factory level per message content

2.4.7 

* port number in case of submit plugin CondorOSGCE not hardcoded. But default is still 9619
* batchqueue was still mandatory in one plugin. Not anymore
* added panda status throttled to the mappings as notready
* some code in proxymanager.py cleaner, and made baseproxy not mandatory
* made the remote_* variables in proxymanager not mandatory, and removed from proxy.conf
* created bin/autopyfactory_version
* checking if methods _updateclouds( ) and _updatesites( ) in PANDA WMS Status plugin return something valid
* added MissingPluginException to apfexceptions.py
* split the code in method APFQueue.run( ) into 3 separated methods, so they could be called one by one from outside
* starting the APFQueue threads in a separate method _start( )
* using Queue() to serialize the condor_submit tasks
* using self.factory.qcl instead of self.qcl in cleanlogs, so it always keeps the latest configuration, even after reconfig
* Factory.__init__ refactorized, for clarity